[tool.poetry]
name = "documentalist"
version = "0.1.0"
description = ""
authors = ["Valentin Fries"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
langchain = "^0.1.9"
chromadb = "^0.4.23"
python-dotenv = "^1.0.1"
pypdf = "^4.0.2"
click = "^8.1.7"

[tool.poetry.scripts]
main = "documentalist.__main__:cli"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
